public/css/style.css
/*
palette;
turqoise: #13aab4;		rgb  19, 170, 180
off-black: #090909;

blue: #135ab4;
off-black2: #111;

dark blue: #1d13b4;		rgb:29, 19, 180,
dark grey: #222;


yellow:  #f1c40f;
light grey: #ddd;

*/
html{
  margin: 0;
  padding:0;
}

body {
  background-color:  #090909;
  margin: 0;
  padding: 0;
  position:relative;

  color: #ffffff;
  font-family: 'Courier New', Courier, monospace;
  text-align: center;
}

header {
  text-align: center;
  background: url(../about/Header2.png) center no-repeat ;
  background-size: 100% auto;
  margin: 0;
  height: 380px;
  display: flex;
  justify-content: flex-end;
  flex-direction: column;
  width:100vw;
}

h1 {
  font-family: 'Lora', serif;
  font-size: 3em;
  color: #ffffff;
  text-shadow: 2px 2px 5px #111;
}

h2 {
  font-family: 'Lora', serif;
  font-size: 2em;
  font-style: italic;
  color:  #090909;
  text-shadow: 2px 2px 5px #111;
  margin-bottom: 2em;
}

nav {
  background-color: #111;
  opacity: 0.9;
  display:flex;
  justify-content: center;
  align-items: center;
  width:100vw;
  padding: 0.5em;
  box-sizing: border-box;
}

button {
  font-size: 1.5em;
  background: none;
  border-style: none;
  color: #ddd;
}

button::-moz-focus-inner {
	/*removes ugly dotted outline from buttons*/
  border: 0;
}


button:focus{
	font-weight: bolder;
}

button:hover{
	font-weight: bolder;
}

a {
  text-decoration: none;
  color: aqua;
}

a:visited {
  color: aquamarine;
 
}

a:focus, a:hover {
  color: lawngreen;
}

#homeImg h1{
  font-family: 'Lora', serif;
  font-size: 3em;
  color: #ffffff;
  text-shadow: 2px 2px 5px #111;
}

#homeImg h2{
  font-family: 'Lora', serif;
  font-size: 2em;
  color: #ffffff;
  text-shadow: 2px 2px 5px #111;
}

#homeImg h3{
  font-family: 'Lora', serif;
  font-size: 1.5em;
  color: #ffffff;
  text-shadow: 2px 2px 5px #111;
}

#homeImg p{
 width: 80vw;
 font-size: 1em;
 text-align: left;
 margin-left: auto;
 margin-right: auto;
}

#homeImg {
  margin-top: 1em;
  display:flex;
  justify-content: center;
  width:100vw;
}

#homeImg img {
  box-shadow: 2px 2px 5px #222;
  border: 2px solid #111;
  border-radius: 2px;
  box-sizing: border-box;
}

.container {
  padding: 1em;

/*sets up the grid layout*/
  display: grid;
  grid-gap: 1em;
  grid-template-columns:repeat(auto-fit, minmax(50px,1fr));
  grid-auto-rows: 50px;
  grid-auto-flow: dense;

  box-sizing: border-box;
  width:100vw;
}

.container div{
  overflow:hidden;
  position: relative;

  border-style: none;
  border-radius: 3px;
  box-shadow: 2px 2px 5px #222;
}

.container div img {
  display: block;
  position: absolute;
  min-height: 100%;
  width:100%;

  /*centers the element both horizontally and vertically*/
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.landscape {
  grid-column: span 4;
  grid-row: span 3;
}

.portrait {
  grid-column: span 4;
  grid-row: span 6;
}

.big {
  grid-column: span 8;
  grid-row: span 6;
}

#background{
	z-index: 1;
	background-color:rgba(69, 69, 69, 0.4);
	min-height: 100%;
	min-width: 100%;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}

#nav {
	position: fixed;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	z-index:15;

	max-width: 90vw;
	height:90vh;

	display: grid;
 	grid-template-columns: 1fr auto 1fr;
	grid-template-areas: "prev slideshow next";
	align-items: center;
	background-color: rgba(19, 19, 19 ,0.8);
	transition: background-color 2s;
}

#slideshow {
  border-radius: 2px;
  max-height: 90vh;
  max-width:90vw;
  margin-bottom: 0;
}

#slideshow img {
  /*ensures responsive img size*/
  max-width:75vw;
  height:auto;
  max-height: 89vh;

  vertical-align: middle;
}


#pausePlay{
	position: fixed;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	z-index: 21;
}

button .prev{
	position: relative;
	left: 5px;
	grid-area: prev;
}

button .next {
	grid-area: next;
}

.slideshow{
	  grid-area: slideshow;
}

.material-icons.md-18 { font-size: 18px; }
.material-icons.md-24 { font-size: 24px; }
.material-icons.md-36 { font-size: 36px; }
.material-icons.md-48 { font-size: 48px; }

@media only screen and (max-width: 750px){
#nav {
  background: rgba(19, 19, 19, 0.0);
}
#nav button{
  visibility: hidden;
}
}
@media only screen and (max-width: 550px){
  nav {
    display:grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    grid-gap: 1em;
  }
}

@media only screen and (max-width: 350px){
  nav {
    display:grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    grid-gap: 1em;
  }
}

@media only screen and (max-width: 320px){
  nav {
    display:flex;
    flex-direction: column;
  }
}

